2003-02-12  Glenn Morris  <gmorris@ast.cam.ac.uk>

	* progmodes/fortran.el (fortran-fill): Fill lines that do not have
	comments.

2003-02-12  Juanma Barranquero  <lektu@terra.es>

	* files.el (file-truename): Revert change from 2002-11-27.

2003-02-12  Luc Teirlinck  <teirllm@mail.auburn.edu>

	* help-fns.el (describe-function-1): Change output for keyboard
	macros.

2003-02-12  Andreas Schwab  <schwab@suse.de>

	* progmodes/sh-script.el (sh-mode-map): Don't remap
	beginning-of-defun to the non-existing command
	sh-beginning-of-compound-command.

2003-02-12  Karl Chen  <quarl@hkn.eecs.berkeley.edu>  (tiny change)

	* files.el (find-alternate-file): Check whether `dired-directory'
	is bound.

2003-02-12  Simon Marshall  <simon@gnu.org>

	* progmodes/make-mode.el (makefile-font-lock-keywords): Fontify
	single character variable references, but protect shell variables
	references.
	(makefile-mode): Make `$' be punctuation in font-lock-defaults.

2003-02-12  Ami Fischman  <ami@fischman.org>

	Face markup of calendar and diary displays: Any entry line that
	ends with [foo:value] where foo is a face attribute (except :box
	:stipple) or with [face:blah] tags, will have these values applied
	to the calendar and fancy diary displays. These attributes "stack"
	on calendar displays.  File-wide attributes can be defined as
	follows: the first line matching "^# [tag:value]" defines the
	value for that particular tag.  All of the tags' regexps can be
	customized.

	* calendar/calendar.el (diary-face-attrs): New custom.
	(diary-file-name-prefix-function): New custom.
	(diary-glob-file-regexp-prefix): New custom.
	(diary-file-name-prefix): New custom.
	(generate-calendar-window): Check that font-lock-mode is bound
	before checking value.
	(mark-visible-calendar-date): Add the ability to pass face
	attribute/value pairs in the mark argument.  Handle the mark.

	* calendar/diary-lib.el (diary-attrtype-convert): Convert an
	attribute value string to the desired type.